# Gergo.Kovacs

./: .gitignore
Orientation_Example_Exam/bit_roll_File_IO/: CMakeLists.txt  bit_roll.c  bit_roll.h  main.c
Orientation_Example_Exam/car_register/: CMakeLists.txt  car_register.c  car_register.h  main.c
Orientation_Example_Exam/file_IO_memory_allocation/: A66_Logs.txt  CMakeLists.txt  main.c
Orientation_Example_Exam/rgb_led_pwm_interrupt/: main.c
Orientation_Example_Exam/search_from_file_by_given_parameter/: CMakeLists.txt  main.c
Video practise/abstract_classes/: CMakeLists.txt  main.cpp
Video practise/inharitance&multiple in./: CMakeLists.txt  main.cpp
Video practise/materialrew./: CMakeLists.txt  Circle.cpp  Circle.h  Rect.cpp  Rect.h  shape.cpp  shape.h
Video practise/untitled/: main.cpp
exam_trial_basics& video practise/Video practise/materialrew./: Circle.h  Rect.cpp  Rect.h  shape.cpp  shape.h
exam_trial_basics/TRIAL EXAM/: QuestionTime.txt
exam_trial_basics/TRIAL EXAM/pirates/: CMakeLists.txt
exam_trial_basics/TRIAL EXAM/symmetric_matrix/: main.cpp
exam_trial_basics/most_common_character/: CMakeLists.txt  main.cpp
exam_trial_basics/symmetric_matrix/: CMakeLists.txt
task0/: drawing.rtf
trial2_exam/animal_protection/: Animal.cpp  Animal.h  AnimalShelter.cpp  AnimalShelter.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Parrot.cpp  Parrot.h  main.cpp
week-01/day-3/Feladat123/: main.cpp
week-01/day-3/Feladat4/: CMakeLists.txt
week-01/day-3/Feladat5/: CMakeLists.txt
week-01/day-3/Feladat7/: CMakeLists.txt  main.cpp
week-01/day-3/Feladat8/: CMakeLists.txt  main.cpp
week-01/day-3/Feladat9/: CMakeLists.txt  main.cpp
week-01/day-3/feladat12/: main.cpp
week-01/day-3/feladat13/: main.cpp
week-01/day-3/feladat16/: main.cpp
week-01/day-3/feladat17/: main.cpp
week-01/day-3/feladat19/: main.cpp
week-01/day-3/feladat20/: main.cpp
week-01/day-3/feladat21/: main.cpp
week-01/day-3/feladat22/: main.cpp
week2/day2/adding/: main.cpp
week3/: tree.txt
week3/animal/: main.cpp
week3/blogpost/: main.cpp
week3/diceset/: CMakeLists.txt  dice_set.cpp  dice_set.h  main.cpp
week3/dominoes/: domino.cpp  domino.h
week3/fleetofthing/: fleet.h  main.cpp  thing.h
week3/fleetofthings/: Thing.cpp  Thing.h  fleet.cpp  fleet.h
week3/patrolstation/: Car.cpp  Car.h  Station.cpp  Station.h
week3/pokemon/: pokemon.cpp
week3/postit/: CMakeLists.txt
week3/sharpie/: Sharpie.h  main.cpp
week4/day3/Instruments_to_Stringed_Instruments/: CMakeLists.txt  bassGuitar.cpp  bassGuitar.h  electricGuitar.cpp  electricGuitar.h  instrument.h  main.cpp  strigedInstrument.cpp  strigedInstrument.h  violin.cpp  violin.h
week4/day4/Apples/: CMakeLists.txt
week4/day4/Apples/Apples_Lib/: apples.cpp  apples.h
week4/day4/Apples/Apples_Tests/: CMakeLists.txt  apples_test.cpp
week4/materialRew.:testing:/: CMakeLists.txt  main.cpp
week6/hello-me/: main.c
week6/two-numbers/: main.c
(+232 files in other folders)
